# x07

./: .dockerignore  .gitattributes  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  OWNERS.md  Package.swift  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md
crates/x07/: Cargo.toml
crates/x07-ext-archive-native/: Cargo.toml
crates/x07-ext-archive-native/src/: lib.rs
crates/x07-ext-db-mysql-native/: Cargo.toml
crates/x07-ext-db-mysql-native/src/: lib.rs
crates/x07-ext-db-native-core/: Cargo.toml
crates/x07-ext-db-native-core/src/: lib.rs
crates/x07-ext-db-pg-native/: Cargo.toml
crates/x07-ext-db-pg-native/src/: lib.rs
crates/x07-ext-db-redis-native/: Cargo.toml
crates/x07-ext-db-redis-native/src/: lib.rs
crates/x07-ext-db-sqlite-native/: Cargo.toml
crates/x07-ext-db-sqlite-native/src/: lib.rs
crates/x07-ext-jsonschema-native/: Cargo.toml
crates/x07-ext-jsonschema-native/src/: lib.rs
crates/x07-ext-obj-s3-native/: Cargo.toml
crates/x07-ext-obj-s3-native/src/: lib.rs
crates/x07-host-runner/: Cargo.toml
crates/x07-host-runner/src/: lib.rs  main.rs  native_backends.rs
crates/x07-host-runner/tests/: c_backend.rs  cli_cc_profile.rs  cli_compile_only.rs  cli_module_root.rs  concurrency_primitives_smoke.rs  contracts_runtime.rs  core_builtin_features.rs  exit_code.rs  hardening.rs  missing_dep_hints.rs  native_link_argv_table.rs  optimizer_semantics.rs  phaseE_stdlib.rs  process_abi_v1.rs  rr_fixture.rs  scheduler_tasks_realloc.rs  solve_fs.rs  solve_kv.rs  solve_pure.rs  solve_rr.rs  stderr_parsing.rs  stdlib_collections.rs  stdlib_smoke.rs  x07_program.rs
crates/x07-math-native/: Cargo.toml  README.md
crates/x07-math-native/src/: lib.rs
crates/x07-os-runner/: Cargo.toml
crates/x07-os-runner/src/: main.rs  policy.rs
crates/x07-os-runner/src/sandbox/: mod.rs
crates/x07-pkg/: Cargo.toml
crates/x07-pkg/src/: lib.rs
crates/x07-pkg/tests/: credentials.rs  http.rs  index_entries.rs  signing.rs
crates/x07-proc-echo/: Cargo.toml
crates/x07-proc-echo/src/: main.rs
crates/x07-proc-worker-frame-echo/: Cargo.toml
crates/x07-proc-worker-frame-echo/src/: main.rs
crates/x07-runner-common/: Cargo.toml
crates/x07-runner-common/src/: auto_ffi.rs  lib.rs  os_env.rs  os_paths.rs  os_policy.rs  sandbox_backend.rs
crates/x07-time-native/: Cargo.toml  README.md
crates/x07-time-native/src/: lib.rs
crates/x07-worlds/: Cargo.toml
crates/x07-worlds/src/: lib.rs
crates/x07/src/: agent.rs  arch.rs  assets_cmd.rs  ast.rs  ast_slice_engine.rs  bench.rs  brands.rs  bundle.rs  cli.rs  contract_repro.rs  delegate.rs  diag.rs  doc.rs  doctor.rs  fix_suggest.rs  gen.rs  guide.rs  init.rs  main.rs  patch.rs  pbt.rs  pbt_fix.rs  pkg.rs  policy.rs  policy_overrides.rs  project_cmd.rs  project_ctx.rs  prove.rs  repair.rs  report_common.rs  reporting.rs  repro.rs  review.rs  rr.rs  run.rs  schema.rs  service.rs  service_genpack.rs  service_validate.rs  sm.rs  (+12 more)
crates/x07/src/assets/: stdlib_summaries.json  x07cli_specrows_canon_v1.x07.json  x07cli_specrows_compile_v1.x07.json
crates/x07/src/cli/: specrows_semantic.rs
crates/x07/tests/: build_emit_wasm_smoke.rs  cli.rs  x07text_corpus.rs
crates/x07c/: Cargo.toml
crates/x07c/include/: x07_abi_v1.h  x07_abi_v2.h  x07_ext_archive_abi_v1.h  x07_ext_db_mysql_abi_v1.h  x07_ext_db_pg_abi_v1.h  x07_ext_db_redis_abi_v1.h  x07_ext_db_sqlite_abi_v1.h  x07_ext_fs_abi_v1.h  x07_ext_jsonschema_abi_v1.h  x07_ext_obj_s3_abi_v1.h  x07_ext_rand_abi_v1.h  x07_ext_regex_abi_v1.h  x07_ext_stdio_abi_v1.h  x07_math_abi_v1.h  x07_stream_xf_plugin_abi_v1.h  x07_time_abi_v1.h
crates/x07c/src/: ast.rs  builtin_modules.rs  c_emit.rs  c_emit_async.rs  c_emit_builtins.rs  c_emit_contracts.rs  c_emit_core.rs  c_emit_streams.rs  c_emit_types.rs  c_emit_worlds.rs  cli_specrows.rs  compat.rs  compile.rs  contracts_elab.rs  diagnostics.rs  enums.rs  fingerprint.rs  generics.rs  guide.rs  json_patch.rs  language.rs  lib.rs  lint.rs  main.rs  mem_provenance.rs  module_source.rs  native.rs  optimize.rs  program.rs  project.rs  records.rs  stream_pipe.rs  suggest.rs  typecheck.rs  types.rs  unify.rs  validate.rs  world_config.rs  x07ast.rs
crates/x07c/src/wasm_emit/: emit_module.rs  features.rs  layout.rs  mod.rs
crates/x07c/tests/: abi_layout.c  abi_layout.rs  brand_cast_dce.rs  budget_scope_from_arch.rs  c_emit_golden_sha256.rs  check_program_all_decls.rs  cli_output_contracts.rs  contracts_lint.rs  contracts_typecheck.rs  contracts_verify_bmc_emit.rs  freestanding_header_smoke.rs  generics_tapp_ambiguity.rs  internal_only_builtins.rs  lint_borrow_rules.rs  lint_generics.rs  lint_mem_provenance.rs  lint_quickfix.rs  lint_quickfix_borrow_rules.rs  lint_quickfix_tapp.rs  lint_unsafe.rs  optimize_licm_bytes_len_scope.rs  os_process_streaming.rs  phaseH1_types.rs  project_paths.rs  refactoring_1.rs  stdlib_generics_smoke.rs  stdlib_http_envelope_smoke.rs  stream_pipe_elaboration.rs  ty_intrinsics_implicit_imports.rs  type_collect_tapp_rewrites.rs  type_infer_generic_smoke.rs  type_infer_locals.rs  type_sigs_collect.rs  type_unify_message.rs  type_unify_smoke.rs  typecheck_builtins.rs  typecheck_stmt_context.rs  types_smoke.rs  unsafe_ffi_smoke.rs  wasm_emit_smoke.rs  (+6 more)
crates/x07c/tests/typecheck_testutil/: mod.rs
crates/x07import-cli/: Cargo.toml
crates/x07import-cli/src/: main.rs
crates/x07import-core/: Cargo.toml
crates/x07import-core/src/: diagnostics.rs  lib.rs  util.rs  x07_emit.rs  x07ir.rs
crates/x07import-core/src/c/: lower.rs  mod.rs  parse.rs  validate.rs
crates/x07import-core/src/rust/: mod.rs
crates/x07import-core/tests/: c_frontend_smoke.rs  difftest_rust_stdlib.rs
crates/x07up/: Cargo.toml
crates/x07up/assets/: AGENT.template.md
crates/x07up/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: compile_program_to_c.rs  parse_sexpr.rs
sdk/genpack-py/: README.md  pyproject.toml
sdk/genpack-py/src/x07_genpack/: __init__.py  client.py  error_codes.py  errors.py  types.py
sdk/genpack-py/tests/: test_client.py
(+1983 files in other folders)
