[package]
name = "x07-ext-archive-native"
version = "0.2.6"




edition = "2021"
license = "Apache-2.0 OR MIT"

[lib]
name = "x07_ext_archive"
crate-type = ["staticlib", "rlib"]
doctest = false

[dependencies]
crc32fast = "1.4.2"
flate2 = "1.1.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
x07-ext-os-native-core = { path = "../x07-ext-os-native-core" }
zip = { version = "=2.4.2", default-features = false, features = ["deflate"] }
