[package]
name = "x07-ext-db-mysql-native"
version = "0.1.37"















































































































edition = "2021"
license = "Apache-2.0 OR MIT"

[lib]
name = "x07_ext_db_mysql"
crate-type = ["staticlib"]
test = false
doctest = false

[dependencies]
x07-ext-db-native-core = { path = "../x07-ext-db-native-core" }
flate2 = { version = "1.1.8", default-features = false, features = ["rust_backend"] }
itoa = "1.0.11"
mysql_async = { version = "0.36.1", default-features = false, features = ["rustls-tls"] }
once_cell = "1.19.0"
ryu = "1.0.17"
tokio = { version = "1.37.0", features = ["rt", "time", "net", "sync"] }
