[package]
name = "x07-ext-db-native-core"
version = "0.2.8"


































































































































































































edition = "2021"
license = "Apache-2.0 OR MIT"

[lib]
test = false
doctest = false

[dependencies]
