[package]
name = "x07-ext-db-sqlite-native"
version = "0.1.34"












































































































edition = "2021"
license = "Apache-2.0 OR MIT"

[lib]
name = "x07_ext_db_sqlite"
crate-type = ["staticlib"]
test = false
doctest = false

[dependencies]
x07-ext-db-native-core = { path = "../x07-ext-db-native-core" }
itoa = "1.0.11"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
once_cell = "1.19.0"
ryu = "1.0.17"
