[package]
name = "x07-ext-jsonschema-native"
version = "0.1.34"















edition = "2021"
license = "Apache-2.0 OR MIT"

[lib]
name = "x07_ext_jsonschema"
crate-type = ["staticlib", "rlib"]
doctest = false

[dependencies]
jsonschema = "0.21.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
