[package]
name = "x07-ext-obj-s3-native"
version = "0.2.8"





























edition = "2021"
license = "Apache-2.0 OR MIT"

[lib]
name = "x07_ext_obj_s3"
crate-type = ["staticlib"]
doctest = false

[dependencies]
hmac = "0.12"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "macros"] }
x07-ext-obj-native-core = { path = "../x07-ext-obj-native-core" }
