[package]
name = "x07-os-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

x07-contracts = { path = "../x07-contracts" }
x07-worlds = { path = "../x07-worlds" }
x07-host-runner = { path = "../x07-host-runner" }
x07c = { path = "../x07c" }
