[package]
name = "x07-pkg"
version = "0.1.46"
























































































































edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
ureq = "3"
url = "2"
