[package]
name = "x07-proc-echo"
version = "0.2.17"










































































































































































































edition = "2021"
publish = false

[dependencies]
