[package]
name = "x07-runner-common"
version = "0.1.36"







































































































edition = "2021"

[features]
clap = ["dep:clap"]

[dependencies]
anyhow = "1"
clap = { version = "4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

x07-contracts = { path = "../x07-contracts" }
x07-worlds = { path = "../x07-worlds" }
