[package]
name = "x07-worlds"
version = "0.1.104"


















































































































































































edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }

[features]
clap = ["dep:clap"]
