[package]
name = "x07"
version = "0.0.60"




































edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
jsonschema = "0.38.1"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
sha2 = "0.10"
ureq = "3"

x07-contracts = { path = "../x07-contracts" }
x07-host-runner = { path = "../x07-host-runner" }
x07-pkg = { path = "../x07-pkg" }
x07-runner-common = { path = "../x07-runner-common" }
x07c = { path = "../x07c" }
x07-worlds = { path = "../x07-worlds", features = ["clap"] }
