[package]
name = "x07c"
version = "0.0.73"

















































edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
x07-contracts = { path = "../x07-contracts" }
x07-worlds = { path = "../x07-worlds", features = ["clap"] }
