[package]
name = "x07import-cli"
version = "0.0.86"






























































edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

x07import-core = { path = "../x07import-core" }
