[package]
name = "x07up"
version = "0.1.73"



















































































































































edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
ureq = "3"
xz2 = "0.1"
zip = "2"
