[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "x07-genpack"
version = "0.1.0"
description = "Tiny SDK for retrieving X07 x07AST generation-pack artifacts (JSON Schema + CFG bundle + semantic supplement)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }

authors = [
  { name = "x07lang", email = "support@x07lang.org" }
]

keywords = [
  "x07",
  "x07ast",
  "structured-output",
  "json-schema",
  "constrained-decoding",
  "grammar",
  "agentic-coding"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries"
]

dependencies = []

[project.optional-dependencies]
xgrammar = ["xgrammar>=0.1.0"]
outlines = ["outlines>=0.2.0"]

dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.8.0",
  "build>=1.0.0",
  "twine>=5.0.0"
]

[project.urls]
Homepage = "https://x07lang.org"
Documentation = "https://x07lang.org/docs"
Repository = "https://github.com/x07lang/x07"
Issues = "https://github.com/x07lang/x07/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/x07_genpack"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md",
  "/LICENSE-MIT",
  "/LICENSE-APACHE"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: tests that invoke the real x07 binary"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
